--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "npm-fund-test": "^0.0.1"
     }
 }
