--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:amndtzzYtl74DQqC45C6KWTCUGEIH+/4Vfn8VQ24ZP8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://product-sample.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
