--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,4 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+   RewriteEngine On
+   RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
